--- a/WE-A-ME/1-Index/Index.html
+++ b/WE-A-ME/1-Index/Index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/9f4953c9b7.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>We-A-Me.com</title>
 </head>
 
 <body>
