--- a/WE-A-ME/Padrão_Footer/Footer.html
+++ b/WE-A-ME/Padrão_Footer/Footer.html
@@ -15,11 +15,11 @@
 <body>
 
     <div class="container-">
-        <footer class="p-2">
+        <footer class=" p-2">
             <div class="row text-center">
                 
                 <div>
-                    <img  src="img/img-rodape.png" alt="" style="width: 10%;">
+                    <a href="../1-Index/index.html"><img  src="img/img-rodape.png" alt="" style="width: 10%;"></a>
                 </div>
 
                 <div class="footer--topicos col-3">
@@ -61,7 +61,7 @@
                         <p>Alguma duvida ou sugestão ? </p>
                         <div class="d-flex w-100 gap-2">
                             <label for="newsletter1" class="visually-hidden">Email address</label>
-                            <input id="newsletter1" type="text" class="form-control" placeholder="Endereço de Email">
+                            <input id="newsletter1" type="text" class="form-control" placeholder="Digite Aqui !">
                             <button class="btn btn-primary" type="button">Enviar</button>
                         </div>
                     </form>
