--- a/WE-A-ME/3-Categorias/categorias.html
+++ b/WE-A-ME/3-Categorias/categorias.html
@@ -58,8 +58,49 @@
         </div>
         <div class="categorias">
 
-        </div>
-        <div class="gif">
+            <div class="card" style="width: 18rem;">
+                <img src="./img/Reformas e reparos.gif" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Reformas e Reparos</h5>
+                </div>
+                <img src="./img/Saúde&Beleza (2).gif" class="card-img-top" alt="...">
+                <div>
+                  <h5 class="card-title">Saúde e Beleza</h5>
+                </div>
+                <img src="./img/Auto.gif" class="card-img-top" alt="...">
+                <div>
+                  <h5 class="card-title">Auto</h5>
+                </div>
+                <img src="./img/Assistência Técnica.gif" class="card-img-top" alt="...">
+                <div>
+                  <h5 class="card-title">Assistência Técnica</h5>
+                </div>
+                <img src="./img/Alimentos.gif" class="card-img-top" alt="...">
+                <div>
+                  <h5 class="card-title">Alimentos</h5>
+                </div>
+                <img src="./img/Programação.gif" class="card-img-top" alt="...">
+                <div>
+                  <h5 class="card-title">Programação</h5>
+                </div>
+                <img src="./img/Limpeza.gif" class="card-img-top" alt="...">
+                <div>
+                  <h5 class="card-title">Limpeza</h5>
+                </div>
+                <img src="./img/Artes e Design.gif" class="card-img-top" alt="...">
+                <div>
+                  <h5 class="card-title">Artes e Design</h5>
+                </div>
+                <img src="./img/Comércio.gif" class="card-img-top" alt="...">
+                <div>
+                  <h5 class="card-title">Comércio</h5>
+                </div>
+                <img src="./img/Moda.gif" class="card-img-top" alt="...">
+                <div>
+                  <h5 class="card-title">Moda</h5>
+                </div>
+                
+              </div>
 
         </div>
     </div>
