Altura da imagem

--- a/WE-A-ME/4-Categorias(Reparos)/reformas.html
+++ b/WE-A-ME/4-Categorias(Reparos)/reformas.html
@@ -49,7 +49,7 @@
             <li><a href="#" class="nav-link px-2 " id="navbarletra">Limpeza</a></li>
             <li><a href="#" class="nav-link px-2 " id="navbarletra">Design</a></li>
             <li><a href="#" class="nav-link px-2 " id="navbarletra">Comércio</a></li>
-            <li><a href="#" class="nav-link px-2 " id="navbarletra">Moda</a></li>
+            <li><a href="../Categorias(Moda)/html/Moda.html" class="nav-link px-2 " id="navbarletra">Moda</a></li>
         </ul>
     <div class="linhahorizontal"></div>
 
