--- a/WE-A-ME/Categorias(Moda)/html/Moda.html
+++ b/WE-A-ME/Categorias(Moda)/html/Moda.html
@@ -42,7 +42,7 @@
       <!-- Serviços -->   
       <div class="container-fluid" id="servicos">
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="#" class="nav-link px-2" id="navbarletra">Reformas e Reparo</a></li>
+            <li><a href="../../4-Categorias(Reparos)/reformas.html" class="nav-link px-2" id="navbarletra">Reformas e Reparo</a></li>
             <li><a href="#" class="nav-link px-2" id="navbarletra">Beleza</a></li>
             <li><a href="#" class="nav-link px-2 " id="navbarletra">Auto</a></li>
             <li><a href="#" class="nav-link px-2 " id="navbarletra">Assistência Técnica</a></li>
