--- a/WE-A-ME/7-ComoFunciona/7.1-ComoAvaliar/comoavaliar.html
+++ b/WE-A-ME/7-ComoFunciona/7.1-ComoAvaliar/comoavaliar.html
@@ -18,7 +18,7 @@
 
         <h1 class="h1">Como avaliar</h1>
         <br>
-        <p class="lorem">As avaliações podem ser feitas no aplicativo com notas de 1 a 5 nas estrelas<br> Da média dessas pontuações, representadas por estrelas, é apresentada a nota geral.<br> Essa nota final tem grande importância, uma vez que 100% dos consumidores tendem a baixar um app se tiver cinco estrelas.<br>
+        <p class="lorem">As avaliações podem ser feitas no aplicativo com notas de 1 a 5 nas estrelas<br> Da média dessas pontuações, representadas por estrelas, é apresentada a nota geral.<br> Essa nota final tem grande importância, uma vez que 100% das estrelas estejam preenchidas, melhor é a avaliação do Parceiro.<br>
             Você só conseguirá avaliar um Parceiro WE-A-ME se contratar um serviço dele e já estar finalizado. <br>
             Todas as avaliações são monitoradas pelo <link href="../6-Suporte/Suporte.html"> Nosso Suporte, trazendo para você cliente e para nossos parceiros confiança e integridade!<br>
             A avaliação funciona de forma segura e anônima.<br> 
